Added new function 'isVariantOfMass' and check for Kind AVOGADRO in 'isVariantOfSubstance'.