@@ -4,14 +4,12 @@
  * ----------------------------------------------------------------------------
  * This file is part of JSBML. Please visit <http://sbml.org/Software/JSBML>
  * for the latest version of JSBML and more information about SBML.
- *
  * Copyright (C) 2009-2016 jointly by the following organizations:
  * 1. The University of Tuebingen, Germany
  * 2. EMBL European Bioinformatics Institute (EBML-EBI), Hinxton, UK
  * 3. The California Institute of Technology, Pasadena, CA, USA
  * 4. The University of California, San Diego, La Jolla, CA, USA
  * 5. The Babraham Institute, Cambridge, UK
- * 
  * This library is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License as published by
  * the Free Software Foundation. A copy of the license agreement is provided
@@ -59,162 +57,167 @@ public class Unit extends AbstractSBase {
    * @date 2009-08-31
    */
   public static enum Kind {
-    /**
-     * The ampere unit.
-     */
-    AMPERE,
-    /**
-     * This unit is DIMENSIONLESS multiplied with Avogadro's number.
-     */
-    AVOGADRO,
-    /**
-     * The becquerel unit.
-     */
-    BECQUEREL,
-    /**
-     * The candela unit.
-     */
-    CANDELA,
-    /**
-     * The Celsius unit.
-     * @deprecated use {@link #KELVIN} instead (1 Celsius = 1 K + 271.15)
-     */
-    @Deprecated
-    CELSIUS,
-    /**
-     * The coulomb unit.
-     */
-    COULOMB,
-    /**
-     * A pseudo-unit indicating a dimensionless quantity. (This is in fact
-     * defined in the SBML specification.)
-     */
-    DIMENSIONLESS,
-    /**
-     * The farad unit.
-     */
-    FARAD,
-    /**
-     * The gram unit.
-     */
-    GRAM,
-    /**
-     * The gray unit.
-     */
-    GRAY,
-    /**
-     * The henry unit.
-     */
-    HENRY,
-    /**
-     * The hertz unit.
-     */
-    HERTZ,
-    /**
-     * Marker used to indicate an invalid or not yet set unit.
-     */
-    INVALID,
-    /**
-     * A pseudo-unit representing a single 'thing'. (This is in fact defined
-     * in the SBML specification.)
-     */
-    ITEM,
-    /**
-     * The joule unit.
-     */
-    JOULE,
-    /**
-     * The katal unit.
-     */
-    KATAL,
-    /**
-     * The kelvin unit.
-     */
-    KELVIN,
-    /**
-     * The kilogram unit.
-     */
-    KILOGRAM,
-    /**
-     * Alternate spelling of litre.
-     * @deprecated use {@link #LITRE} instead.
-     */
-    @Deprecated
-    LITER,
-    /**
-     * The litre unit.
-     */
-    LITRE,
-    /**
-     * The lumen unit.
-     */
-    LUMEN,
-    /**
-     * The lux unit.
-     */
-    LUX,
-    /**
-     * Alternate spelling of metre.
-     * @deprecated use {@link #METRE} instead.
-     */
-    @Deprecated
-    METER,
-    /**
-     * The metre unit.
-     */
-    METRE,
-    /**
-     * The mole unit.
-     */
-    MOLE,
-    /**
-     * The newton unit.
-     */
-    NEWTON,
-    /**
-     * The ohm unit.
-     */
-    OHM,
-    /**
-     * The pascal unit.
-     */
-    PASCAL,
-    /**
-     * The radian unit.
-     */
-    RADIAN,
-    /**
-     * The second unit.
-     */
-    SECOND,
-    /**
-     * The siemens unit.
-     */
-    SIEMENS,
-    /**
-     * The sievert unit.
-     */
-    SIEVERT,
-    /**
-     * The steradian unit.
-     */
-    STERADIAN,
-    /**
-     * The tesla unit.
-     */
-    TESLA,
-    /**
-     * The volt unit.
-     */
-    VOLT,
-    /**
-     * The watt unit.
-     */
-    WATT,
-    /**
-     * The weber unit.
-     */
-    WEBER;
+                           /**
+                            * The ampere unit.
+                            */
+                           AMPERE,
+                           /**
+                            * This unit is DIMENSIONLESS multiplied with
+                            * Avogadro's number.
+                            */
+                           AVOGADRO,
+                           /**
+                            * The becquerel unit.
+                            */
+                           BECQUEREL,
+                           /**
+                            * The candela unit.
+                            */
+                           CANDELA,
+                           /**
+                            * The Celsius unit.
+                            * 
+                            * @deprecated use {@link #KELVIN} instead (1 Celsius
+                            *             = 1 K + 271.15)
+                            */
+                           @Deprecated CELSIUS,
+                           /**
+                            * The coulomb unit.
+                            */
+                           COULOMB,
+                           /**
+                            * A pseudo-unit indicating a dimensionless quantity.
+                            * (This is in fact
+                            * defined in the SBML specification.)
+                            */
+                           DIMENSIONLESS,
+                           /**
+                            * The farad unit.
+                            */
+                           FARAD,
+                           /**
+                            * The gram unit.
+                            */
+                           GRAM,
+                           /**
+                            * The gray unit.
+                            */
+                           GRAY,
+                           /**
+                            * The henry unit.
+                            */
+                           HENRY,
+                           /**
+                            * The hertz unit.
+                            */
+                           HERTZ,
+                           /**
+                            * Marker used to indicate an invalid or not yet set
+                            * unit.
+                            */
+                           INVALID,
+                           /**
+                            * A pseudo-unit representing a single 'thing'. (This
+                            * is in fact defined
+                            * in the SBML specification.)
+                            */
+                           ITEM,
+                           /**
+                            * The joule unit.
+                            */
+                           JOULE,
+                           /**
+                            * The katal unit.
+                            */
+                           KATAL,
+                           /**
+                            * The kelvin unit.
+                            */
+                           KELVIN,
+                           /**
+                            * The kilogram unit.
+                            */
+                           KILOGRAM,
+                           /**
+                            * Alternate spelling of litre.
+                            * 
+                            * @deprecated use {@link #LITRE} instead.
+                            */
+                           @Deprecated LITER,
+                           /**
+                            * The litre unit.
+                            */
+                           LITRE,
+                           /**
+                            * The lumen unit.
+                            */
+                           LUMEN,
+                           /**
+                            * The lux unit.
+                            */
+                           LUX,
+                           /**
+                            * Alternate spelling of metre.
+                            * 
+                            * @deprecated use {@link #METRE} instead.
+                            */
+                           @Deprecated METER,
+                           /**
+                            * The metre unit.
+                            */
+                           METRE,
+                           /**
+                            * The mole unit.
+                            */
+                           MOLE,
+                           /**
+                            * The newton unit.
+                            */
+                           NEWTON,
+                           /**
+                            * The ohm unit.
+                            */
+                           OHM,
+                           /**
+                            * The pascal unit.
+                            */
+                           PASCAL,
+                           /**
+                            * The radian unit.
+                            */
+                           RADIAN,
+                           /**
+                            * The second unit.
+                            */
+                           SECOND,
+                           /**
+                            * The siemens unit.
+                            */
+                           SIEMENS,
+                           /**
+                            * The sievert unit.
+                            */
+                           SIEVERT,
+                           /**
+                            * The steradian unit.
+                            */
+                           STERADIAN,
+                           /**
+                            * The tesla unit.
+                            */
+                           TESLA,
+                           /**
+                            * The volt unit.
+                            */
+                           VOLT,
+                           /**
+                            * The watt unit.
+                            */
+                           WATT,
+                           /**
+                            * The weber unit.
+                            */
+                           WEBER;
 
     /**
      * Tests whether the both given unit kinds are equivalent, i.e., it also
@@ -226,10 +229,11 @@ public class Unit extends AbstractSBase {
      */
     public static boolean areEquivalent(Kind kind1, Kind kind2) {
       return kind1 == kind2 || (kind1 == METER && kind2 == METRE)
-          || (kind2 == METER && kind1 == METRE)
-          || (kind1 == LITER && kind2 == LITRE)
-          || (kind2 == LITER && kind1 == LITRE);
+        || (kind2 == METER && kind1 == METRE)
+        || (kind1 == LITER && kind2 == LITRE)
+        || (kind2 == LITER && kind1 == LITRE);
     }
+
 
     /**
      * Returns a set of {@link Kind} objects for the given level/version
@@ -247,12 +251,11 @@ public class Unit extends AbstractSBase {
         switch (version) {
         case 1:
         case 2:
-          kinds = new Kind[] { AMPERE, BECQUEREL, CANDELA, CELSIUS,
-            COULOMB, DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY,
-            HERTZ, ITEM, JOULE, KATAL, KELVIN, KILOGRAM, LITER,
-            LITRE, LUMEN, LUX, METER, METRE, MOLE, NEWTON, OHM,
-            PASCAL, RADIAN, SECOND, SIEMENS, SIEVERT,
-            STERADIAN, TESLA, VOLT, WATT, WEBER };
+          kinds = new Kind[] {AMPERE, BECQUEREL, CANDELA, CELSIUS, COULOMB,
+            DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY, HERTZ, ITEM, JOULE, KATAL,
+            KELVIN, KILOGRAM, LITER, LITRE, LUMEN, LUX, METER, METRE, MOLE,
+            NEWTON, OHM, PASCAL, RADIAN, SECOND, SIEMENS, SIEVERT, STERADIAN,
+            TESLA, VOLT, WATT, WEBER};
           break;
         default:
           break;
@@ -262,24 +265,22 @@ public class Unit extends AbstractSBase {
         switch (version) {
         case 1:
           // Like Level 1 Version 2 without LITER and METER
-          kinds = new Kind[] { AMPERE, BECQUEREL, CANDELA, CELSIUS,
-            COULOMB, DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY,
-            HERTZ, ITEM, JOULE, KATAL, KELVIN, KILOGRAM, LITRE,
-            LUMEN, LUX, METRE, MOLE, NEWTON, OHM, PASCAL,
-            RADIAN, SECOND, SIEMENS, SIEVERT, STERADIAN, TESLA,
-            VOLT, WATT, WEBER };
+          kinds = new Kind[] {AMPERE, BECQUEREL, CANDELA, CELSIUS, COULOMB,
+            DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY, HERTZ, ITEM, JOULE, KATAL,
+            KELVIN, KILOGRAM, LITRE, LUMEN, LUX, METRE, MOLE, NEWTON, OHM,
+            PASCAL, RADIAN, SECOND, SIEMENS, SIEVERT, STERADIAN, TESLA, VOLT,
+            WATT, WEBER};
           break;
         case 2:
         case 3:
         case 4:
         case 5:
           // Like Level 2 Version 1 without CELSIUS
-          kinds = new Kind[] { AMPERE, BECQUEREL, CANDELA, COULOMB,
-            DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY, HERTZ,
-            ITEM, JOULE, KATAL, KELVIN, KILOGRAM, LITRE, LUMEN,
-            LUX, METRE, MOLE, NEWTON, OHM, PASCAL, RADIAN,
-            SECOND, SIEMENS, SIEVERT, STERADIAN, TESLA, VOLT,
-            WATT, WEBER };
+          kinds = new Kind[] {AMPERE, BECQUEREL, CANDELA, COULOMB,
+            DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY, HERTZ, ITEM, JOULE, KATAL,
+            KELVIN, KILOGRAM, LITRE, LUMEN, LUX, METRE, MOLE, NEWTON, OHM,
+            PASCAL, RADIAN, SECOND, SIEMENS, SIEVERT, STERADIAN, TESLA, VOLT,
+            WATT, WEBER};
           break;
         default:
           break;
@@ -290,12 +291,11 @@ public class Unit extends AbstractSBase {
         case 1:
         case 2:
           // like Level 2 Version 4 with additional AVOGADRO
-          kinds = new Kind[] { AMPERE, AVOGADRO, BECQUEREL, CANDELA,
-            COULOMB, DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY,
-            HERTZ, ITEM, JOULE, KATAL, KELVIN, KILOGRAM, LITRE,
-            LUMEN, LUX, METRE, MOLE, NEWTON, OHM, PASCAL,
-            RADIAN, SECOND, SIEMENS, SIEVERT, STERADIAN, TESLA,
-            VOLT, WATT, WEBER };
+          kinds = new Kind[] {AMPERE, AVOGADRO, BECQUEREL, CANDELA, COULOMB,
+            DIMENSIONLESS, FARAD, GRAM, GRAY, HENRY, HERTZ, ITEM, JOULE, KATAL,
+            KELVIN, KILOGRAM, LITRE, LUMEN, LUX, METRE, MOLE, NEWTON, OHM,
+            PASCAL, RADIAN, SECOND, SIEMENS, SIEVERT, STERADIAN, TESLA, VOLT,
+            WATT, WEBER};
           break;
         default:
           break;
@@ -311,46 +311,53 @@ public class Unit extends AbstractSBase {
       return set;
     }
 
+
     /**
      * This method is equivalent to converting the {@link String} to a
      * {@link Kind} and then calling its {@link #isDefinedIn} method. Only
      * entirely upper or entirely lower case {@link String}s are valid
      * attributes here.
-     * 
      * This method tests whether a given string corresponds to a predefined
      * {@link Unit.Kind} enumeration value.
-     * 
      * To check whether a given {@link String} represents some predefined
      * {@link UnitDefinition}, please use the method
      * {@link Unit#isPredefined(String, int)}.
      * 
      * @param unitKind
-     *            the unit string.
+     *        the unit string.
      * @param level
-     *            the SBML level.
+     *        the SBML level.
      * @param version
-     *            the SBML version.
+     *        the SBML version.
      * @return {@code true} if the given string is valid for the
      *         particular SBML level and version, {@code false} otherwise.
      * @see Unit#isPredefined(String, int)
      */
-    public static boolean isValidUnitKindString(String unitKind, int level, int version) {
+    public static boolean isValidUnitKindString(String unitKind, int level,
+      int version) {
       if ((unitKind != null) && (unitKind.length() > 0)) {
         try {
           // We need to do that as our enum is upper case and sbml
           // kind are lower case in the SBML XML representation.
-          Kind uk = Kind.valueOf(unitKind.toUpperCase()); // TODO - check how efficient this call is. Having a HashMap might be better
+          Kind uk = Kind.valueOf(unitKind.toUpperCase()); // TODO - check how
+                                                          // efficient this call
+                                                          // is. Having a
+                                                          // HashMap might be
+                                                          // better
           return uk.isDefinedIn(level, version);
         } catch (IllegalArgumentException exc) {
-          // logger.info("Unit.isValidUnitKindString - KindString = '" + unitKind + "'");
+          // logger.info("Unit.isValidUnitKindString - KindString = '" +
+          // unitKind + "'");
           if (logger.isDebugEnabled()) {
-            logger.debug("isValidUnitKindString exception : " + exc.getMessage());
+            logger.debug(
+              "isValidUnitKindString exception : " + exc.getMessage());
           }
         }
       }
 
       return false;
     }
+
 
     /**
      * Returns the name of this unit kind.
@@ -360,22 +367,19 @@ public class Unit extends AbstractSBase {
     public String getName() {
       if (this == CELSIUS) {
         return "degree "
-            + StringTools.firstLetterUpperCase(toString()
-              .toLowerCase());
+          + StringTools.firstLetterUpperCase(toString().toLowerCase());
       }
       if (this == DIMENSIONLESS || this == GRAM || this == ITEM
-          || this == INVALID || this == KILOGRAM || this == LUX
-          || this == METER || this == METRE || this == MOLE
-          || this == SECOND) {
+        || this == INVALID || this == KILOGRAM || this == LUX || this == METER
+        || this == METRE || this == MOLE || this == SECOND) {
         return toString().toLowerCase();
       } else {
-        return StringTools.firstLetterUpperCase(toString()
-          .toLowerCase());
+        return StringTools.firstLetterUpperCase(toString().toLowerCase());
       }
     }
 
+
     /**
-     * 
      * @return the formula symbol of this unit kind in uni-code notation.
      */
     public String getSymbol() {
@@ -424,7 +428,7 @@ public class Unit extends AbstractSBase {
         return "mol";
       case NEWTON:
         return "N";
-      case OHM:  // upper case Omega character
+      case OHM: // upper case Omega character
         return "\u03A9";
       case PASCAL:
         return "Pa";
@@ -451,15 +455,17 @@ public class Unit extends AbstractSBase {
       }
     }
 
+
     /**
      * Creates a unit ontology identifier for this {@link Kind} if possible
-     * and returns it. See <a href="http://obo.cvs.sourceforge.net/viewvc/obo/obo/ontology/phenotype/unit.obo">the Unit Ontology</a>
+     * and returns it. See <a href=
+     * "http://obo.cvs.sourceforge.net/viewvc/obo/obo/ontology/phenotype/unit.obo">
+     * the Unit Ontology</a>
      * for more information.
      * 
      * @return the unit ontology identifier for this {@link Kind} or null if
      *         this {@link Kind} has no corresponding type in the unit
      *         ontology.
-     * 
      * @see #getUnitOntologyNumber()
      */
     public String getUnitOntologyIdentifier() {
@@ -476,11 +482,16 @@ public class Unit extends AbstractSBase {
       return null;
     }
 
+
     /**
      * Looks for the corresponding unit ontology resource for this
-     * {@link Kind}. Please visit <a href="http://bioportal.bioontology.org/visualize/44519/?conceptid=UO%3A0000003">
-     * http://bioportal.bioontology.org/visualize/44519/?conceptid=UO%3A0000003</a>
-     * and <a href="http://www.ebi.ac.uk/miriam/main/datatypes/MIR:00000136">http://www.ebi.ac.uk/miriam/main/datatypes/MIR:00000136</a>
+     * {@link Kind}. Please visit <a href=
+     * "http://bioportal.bioontology.org/visualize/44519/?conceptid=UO%3A0000003">
+     * http://bioportal.bioontology.org/visualize/44519/?conceptid=UO%3A0000003
+     * </a>
+     * and
+     * <a href="http://www.ebi.ac.uk/miriam/main/datatypes/MIR:00000136">http://
+     * www.ebi.ac.uk/miriam/main/datatypes/MIR:00000136</a>
      * for more details.
      * 
      * @return the unit ontology number of this {@link Kind} or -1 if no
@@ -490,8 +501,8 @@ public class Unit extends AbstractSBase {
       switch (this) {
       case AMPERE:
         return 11;
-        // case AVOGADRO:
-        // return "";
+      // case AVOGADRO:
+      // return "";
       case BECQUEREL:
         return 132;
       case CANDELA:
@@ -502,20 +513,20 @@ public class Unit extends AbstractSBase {
         return 220;
       case DIMENSIONLESS:
         return 186;
-        // case FARAD:
-        // return "";
+      // case FARAD:
+      // return "";
       case GRAM:
         return 21;
       case GRAY:
         return 134;
-        // case HENRY:
-        // return "";
+      // case HENRY:
+      // return "";
       case HERTZ:
         return 106;
-        // case INVALID:
-        // return "";
-        // case ITEM:
-        // return "";
+      // case INVALID:
+      // return "";
+      // case ITEM:
+      // return "";
       case JOULE:
         return 112;
       case KATAL:
@@ -538,8 +549,8 @@ public class Unit extends AbstractSBase {
         return 13;
       case NEWTON:
         return 108;
-        // case OHM:
-        // return "";
+      // case OHM:
+      // return "";
       case PASCAL:
         return 110;
       case RADIAN:
@@ -565,6 +576,7 @@ public class Unit extends AbstractSBase {
       }
     }
 
+
     /**
      * Creates a MIRIAM resource pointing to the entry in the unit ontology
      * corresponding to this {@link Kind}. If such an entry exists, this
@@ -579,10 +591,11 @@ public class Unit extends AbstractSBase {
       String uo = getUnitOntologyIdentifier();
       if (uo != null) {
         return "http://identifiers.org/unit/" + uo;
-        //return "urn:miriam:unit:" + uo.replace(":", "%3A");
+        // return "urn:miriam:unit:" + uo.replace(":", "%3A");
       }
       return null;
     }
+
 
     /**
      * Tests whether this kind of unit is defined in the given level and
@@ -600,12 +613,15 @@ public class Unit extends AbstractSBase {
   /**
    * A {@link Logger} for this class.
    */
-  private static final transient Logger logger = Logger.getLogger(Unit.class);
+  private static final transient Logger logger           =
+    Logger.getLogger(Unit.class);
 
   /**
    * Generated serial version identifier.
    */
-  private static final long serialVersionUID = -6335465287728562136L;
+  private static final long             serialVersionUID =
+    -6335465287728562136L;
+
 
   /**
    * Checks whether the given {@link Unit} and the {@link Unit} represented by
@@ -617,8 +633,10 @@ public class Unit extends AbstractSBase {
    * @see #areEquivalent(Unit, Unit)
    */
   public static boolean areEquivalent(Unit unit, String units) {
-    return areEquivalent(unit, new Unit(1d, 0, Unit.Kind.valueOf(units), 1d, unit.getLevel(), unit.getVersion()));
+    return areEquivalent(unit, new Unit(1d, 0, Unit.Kind.valueOf(units), 1d,
+      unit.getLevel(), unit.getVersion()));
   }
+
 
   /**
    * <p>
@@ -633,16 +651,17 @@ public class Unit extends AbstractSBase {
    * </p>
    * 
    * @param unit1
-   *            the first Unit object to compare
+   *        the first Unit object to compare
    * @param unit2
-   *            the second Unit object to compare
+   *        the second Unit object to compare
    * @return if the 'kind' and 'exponent' attributes of unit1 are identical to
    *         the kind and exponent attributes of unit2, {@code false} otherwise.
    */
   public static boolean areEquivalent(Unit unit1, Unit unit2) {
     return Kind.areEquivalent(unit1.getKind(), unit2.getKind())
-        && unit1.getExponent() == unit2.getExponent();
+      && unit1.getExponent() == unit2.getExponent();
   }
+
 
   /**
    * <p>
@@ -657,9 +676,9 @@ public class Unit extends AbstractSBase {
    * </p>
    * 
    * @param unit1
-   *            the first Unit object to compare
+   *        the first Unit object to compare
    * @param unit2
-   *            the second Unit object to compare
+   *        the second Unit object to compare
    * @return {@code true} if all the attributes of unit1 are identical to the
    *         attributes of unit2, {@code false} otherwise.
    * @see #areEquivalent
@@ -671,12 +690,13 @@ public class Unit extends AbstractSBase {
     return identical && unit1.getScale() == unit2.getScale();
   }
 
+
   /**
    * Returns a UnitDefinition object which contains the argument Unit
    * converted to the appropriate SI unit.
    * 
    * @param unit
-   *            the Unit object to convert to SI
+   *        the Unit object to convert to SI
    * @return a UnitDefinition object containing the SI unit.
    */
   public static UnitDefinition convertToSI(Unit unit) {
@@ -697,8 +717,7 @@ public class Unit extends AbstractSBase {
     case HERTZ:
       /* 1 Becquerel = 1 sec^-1 */
       /* 1 Hertz = 1 sec^-1 */
-      ud.addUnit(new Unit(Math.pow(mult, -1d), scale, Kind.SECOND, -exp,
-        l, v));
+      ud.addUnit(new Unit(Math.pow(mult, -1d), scale, Kind.SECOND, -exp, l, v));
       break;
 
     case CANDELA:
@@ -729,8 +748,7 @@ public class Unit extends AbstractSBase {
 
     case FARAD:
       /* 1 Farad = 1 m^-2 kg^-1 s^4 A^2 */
-      ud.addUnit(new Unit(Math.sqrt(mult), scale, Kind.AMPERE, 2d * exp,
-        l, v));
+      ud.addUnit(new Unit(Math.sqrt(mult), scale, Kind.AMPERE, 2d * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.KILOGRAM, -exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.METRE, -2d * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.SECOND, 4d * exp, l, v));
@@ -751,8 +769,8 @@ public class Unit extends AbstractSBase {
 
     case HENRY:
       /* 1 Henry = 1 m^2 kg s^-2 A^-2 */
-      ud.addUnit(new Unit(1d / Math.sqrt(mult), scale, Kind.AMPERE, (-2d)
-        * exp, l, v));
+      ud.addUnit(
+        new Unit(1d / Math.sqrt(mult), scale, Kind.AMPERE, (-2d) * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.KILOGRAM, exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.METRE, 2d * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.SECOND, (-2d) * exp, l, v));
@@ -784,8 +802,8 @@ public class Unit extends AbstractSBase {
     case LITER:
     case LITRE:
       /* 1 litre = 0.001 m^3 = (0.1 m)^3 */
-      ud.addUnit(new Unit(Math.pow(0.001d * mult, 1d / 3d), scale,
-        Kind.METRE, 3d * exp, l, v));
+      ud.addUnit(new Unit(Math.pow(0.001d * mult, 1d / 3d), scale, Kind.METRE,
+        3d * exp, l, v));
       break;
 
     case LUMEN:
@@ -819,7 +837,8 @@ public class Unit extends AbstractSBase {
 
     case OHM:
       /* 1 ohm = 1 m^2 kg s^-3 A^-2 */
-      ud.addUnit(new Unit(1d / Math.sqrt(mult), scale, Kind.AMPERE, (-2d) * exp, l, v));
+      ud.addUnit(
+        new Unit(1d / Math.sqrt(mult), scale, Kind.AMPERE, (-2d) * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.KILOGRAM, exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.METRE, 2d * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.SECOND, (-3d) * exp, l, v));
@@ -839,8 +858,7 @@ public class Unit extends AbstractSBase {
 
     case SIEMENS:
       /* 1 Siemens = 1 m^-2 * kg^-1 * s^3 * A^2 */
-      ud.addUnit(new Unit(Math.sqrt(mult), scale, Kind.AMPERE, 2 * exp,
-        l, v));
+      ud.addUnit(new Unit(Math.sqrt(mult), scale, Kind.AMPERE, 2 * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.KILOGRAM, -exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.METRE, (-2d) * exp, l, v));
       ud.addUnit(new Unit(1d, scale, Kind.SECOND, 3d * exp, l, v));
@@ -884,17 +902,18 @@ public class Unit extends AbstractSBase {
     return ud.simplify();
   }
 
+
   /**
    * Predicate to test whether a given string is the name of a predefined SBML
    * unit.
    * 
    * @param name
-   *            a {@link String} to be tested against the predefined unit
-   *            names
+   *        a {@link String} to be tested against the predefined unit
+   *        names
    * @param level
-   *            the Level of SBML for which the determination should be made.
-   *            This is necessary because there are a few small differences in
-   *            allowed units between SBML Level 1 and Level 2.
+   *        the Level of SBML for which the determination should be made.
+   *        This is necessary because there are a few small differences in
+   *        allowed units between SBML Level 1 and Level 2.
    * @return {@code true}, if name is one of the five SBML predefined
    *         unit identifiers ('substance', 'volume', 'area', 'length' or
    *         'time'), {@code false} otherwise. The predefined unit
@@ -906,17 +925,18 @@ public class Unit extends AbstractSBase {
     return isPredefined(name, level);
   }
 
+
   /**
    * Predicate to test whether a given string is the name of a predefined SBML
    * unit.
    * 
    * @param name
-   *            a {@link String} to be tested against the predefined unit
-   *            names
+   *        a {@link String} to be tested against the predefined unit
+   *        names
    * @param level
-   *            the Level of SBML for which the determination should be made.
-   *            This is necessary because there are a few small differences in
-   *            allowed units between SBML Level 1 and Level 2.
+   *        the Level of SBML for which the determination should be made.
+   *        This is necessary because there are a few small differences in
+   *        allowed units between SBML Level 1 and Level 2.
    * @return {@code true}, if name is one of the five SBML predefined
    *         unit identifiers ('substance', 'volume', 'area', 'length' or
    *         'time'), {@code false} otherwise. The predefined unit
@@ -924,19 +944,19 @@ public class Unit extends AbstractSBase {
    */
   public static boolean isPredefined(String name, int level) {
     if (level < 3) {
-      if ((level == 2)
-          && (name.equals(UnitDefinition.AREA) ||
-              name.equals(UnitDefinition.LENGTH))) {
+      if ((level == 2) && (name.equals(UnitDefinition.AREA)
+        || name.equals(UnitDefinition.LENGTH))) {
         return true;
       }
       if (name.equals(UnitDefinition.SUBSTANCE)
-          || name.equals(UnitDefinition.VOLUME)
-          || name.equals(UnitDefinition.TIME)) {
+        || name.equals(UnitDefinition.VOLUME)
+        || name.equals(UnitDefinition.TIME)) {
         return true;
       }
     }
     return false;
   }
+
 
   /**
    * Tests whether the given {@link UnitDefinition} belongs to the predefined
@@ -954,8 +974,8 @@ public class Unit extends AbstractSBase {
     return isPredefined(ud.getId(), ud.getLevel());
   }
 
+
   /**
-   * 
    * @param kind
    * @param level
    * @param version
@@ -968,6 +988,7 @@ public class Unit extends AbstractSBase {
       return false;
     }
   }
+
 
   /**
    * <p>
@@ -985,14 +1006,15 @@ public class Unit extends AbstractSBase {
    * </p>
    * 
    * @param name
-   *            a string to be tested
+   *        a string to be tested
    * @param level
-   *            an integer representing the SBML specification Level
+   *        an integer representing the SBML specification Level
    * @param version
-   *            an integer representing the SBML specification Version
+   *        an integer representing the SBML specification Version
    * @return {@code true} if name is a valid UnitKind, {@code false} otherwise
-   * @jsbml.note The allowed unit names differ between SBML Levels 1 and 2 and again
-   *       slightly between Level 2 Versions 1 and 2.
+   * @jsbml.note The allowed unit names differ between SBML Levels 1 and 2 and
+   *             again
+   *             slightly between Level 2 Versions 1 and 2.
    */
   public static boolean isUnitKind(String name, int level, int version) {
     if ((name == null) || UnitDefinition.isPredefined(name, level)) {
@@ -1009,20 +1031,20 @@ public class Unit extends AbstractSBase {
 
   }
 
+
   /**
    * Returns {@code true} if the {@code unit} is a valid unit kind name or an
    * identifier of an existing {@link UnitDefinition}.
-   * 
    * If either the unit or model are null, it will return false.
    * 
    * @param unit
-   *            the identifier of a {@link UnitDefinition} or a valid
-   *            {@link Unit.Kind} identifier for the current level/version
-   *            combination of the model.
+   *        the identifier of a {@link UnitDefinition} or a valid
+   *        {@link Unit.Kind} identifier for the current level/version
+   *        combination of the model.
    * @param model
-   *            the model where to look for the {@code unit}.
-   * 
-   * @return {@code true} if the unit is a valid unit kind name or an identifier of an
+   *        the model where to look for the {@code unit}.
+   * @return {@code true} if the unit is a valid unit kind name or an identifier
+   *         of an
    *         existing {@link UnitDefinition}.
    */
   public static boolean isValidUnit(Model model, String unit) {
@@ -1031,8 +1053,8 @@ public class Unit extends AbstractSBase {
     if ((unit != null) && (model != null)) {
       unit = unit.trim();
       if (unit.length() > 0) {
-        if (Kind.isValidUnitKindString(unit, model.getLevel(), model
-          .getVersion())) {
+        if (Kind.isValidUnitKindString(unit, model.getLevel(),
+          model.getVersion())) {
           isValidUnit = true;
         } else if (model.getUnitDefinition(unit) != null) {
           isValidUnit = true;
@@ -1045,15 +1067,17 @@ public class Unit extends AbstractSBase {
     return isValidUnit;
   }
 
+
   /**
    * Merges two {@link Unit} objects with the same 'kind' attribute value into a
    * single {@link Unit}.
    * 
    * @param unit1
-   *            the first {@link Unit} object; the result of the operation is left as
-   *            a new version of this {@link Unit}, modified in-place.
+   *        the first {@link Unit} object; the result of the operation is left
+   *        as
+   *        a new version of this {@link Unit}, modified in-place.
    * @param unit2
-   *            the second {@link Unit} object to merge with the first
+   *        the second {@link Unit} object to merge with the first
    */
   public static void merge(Unit unit1, Unit unit2) {
     Kind k1 = unit1.getKind();
@@ -1063,29 +1087,22 @@ public class Unit extends AbstractSBase {
       int s1 = unit1.getScale(), s2 = unit2.getScale();
       /*
        * Let's get rid of this offset if there is any...
-       * 
        * We remove the offset by expressing it within a new multiplier,
        * m-prime.
-       * 
        * m-prime = offset / 10^scale + multiplier
-       * 
        * When inserting this again into the unit formula, the offset
        * vanishes:
-       * 
        * ((offset + multiplier * 10^scale) * unit)^exponent
-       * 
        * then becomes
-       * 
        * (m-prime * 10^scale * unit)^exponent
-       * 
        * This is possible because offset and multiplier are real double numbers.
        */
       double m1 = unit1.getOffset() / Math.pow(10, s1) + unit1.getMultiplier();
       double m2 = unit2.getOffset() / Math.pow(10, s2) + unit2.getMultiplier();
-      double e1 = k1 == Kind.DIMENSIONLESS
-          && unit1.getExponent() != 0d ? 0d : unit1.getExponent();
-      double e2 = k2 == Kind.DIMENSIONLESS
-          && unit2.getExponent() != 0d ? 0d : unit2.getExponent();
+      double e1 = k1 == Kind.DIMENSIONLESS && unit1.getExponent() != 0d ? 0d
+        : unit1.getExponent();
+      double e2 = k2 == Kind.DIMENSIONLESS && unit2.getExponent() != 0d ? 0d
+        : unit2.getExponent();
       if (unit1.getOffset() != 0d) {
         unit1.setOffset(0d);
       }
@@ -1097,22 +1114,17 @@ public class Unit extends AbstractSBase {
       /*
        * Note how we combine units:
        * ==========================
-       * 
        * We have (m_1 * 10^{s_1} * u)^e_1 and (m_2 * 10^{s_2} * u)^e_2
-       * 
        * m, s, e denoting multiplier, scale and exponent for each unit.
        * u is either of identical kind or dimensionless or invalid.
-       * 
        * The merged unit is:
-       * 
-       * (m_1^{e_1/(e_1 + e_2)} * m_2^{e_2/(e_1 + e_2)} * 10^{(s_1 * e_1 + s_2 * e_2)/(e_1 + e_2)} * u)^{e_1 + e_2}
-       * 
+       * (m_1^{e_1/(e_1 + e_2)} * m_2^{e_2/(e_1 + e_2)} * 10^{(s_1 * e_1 + s_2 *
+       * e_2)/(e_1 + e_2)} * u)^{e_1 + e_2}
        * Special cases occur if s_1 or s_2 equal 0.
-       * 
-       * It is important to know that the scale must be an integer. Hence, if the
+       * It is important to know that the scale must be an integer. Hence, if
+       * the
        * fraction (s_1 * e_1 + s_2 * e_2)/(e_1 + e_2) is not exactly an integer,
        * we have to merge the scale with the multiplier and set the scale to 0.
-       * 
        * Also note that the exponent of a dimensionless unit must be one,
        * even if it is the result of a cancelation of two other units, i.e.,
        * it should actually be 0.
@@ -1133,7 +1145,8 @@ public class Unit extends AbstractSBase {
         }
 
         if (m1 != m2) {
-          newMultiplier = Math.pow(Math.pow(m1, e1) * Math.pow(m2, e2), 1d / newExponent);
+          newMultiplier =
+            Math.pow(Math.pow(m1, e1) * Math.pow(m2, e2), 1d / newExponent);
         }
 
         if (s1 != s2) {
@@ -1156,8 +1169,6 @@ public class Unit extends AbstractSBase {
             /*
              * If rounding fails, we have to remove the scale and shift it to
              * the multiplier. Otherwise, it would be too inaccurate.
-             *
-             *
              * This is a bit ugly, but there's no other choice,
              * because the scale can only be an integer number. This
              * is the method from libSBML:
@@ -1173,7 +1184,8 @@ public class Unit extends AbstractSBase {
               m2 = unit2.getMultiplier();
               e1 = unit1.getExponent();
               e2 = unit2.getExponent();
-              newMultiplier = Math.pow(Math.pow(m1, e1) * Math.pow(m2, e2), 1d / newExponent);
+              newMultiplier =
+                Math.pow(Math.pow(m1, e1) * Math.pow(m2, e2), 1d / newExponent);
             }
           }
         }
@@ -1216,20 +1228,21 @@ public class Unit extends AbstractSBase {
         "Cannot merge units with different kind properties {0} and {1}. Units can only be merged if both have the same kind attribute or if one of them is dimensionless.",
         k1, k2));
     }
-    // Try to shift multipliers into the scale for easier mathematical treatment of the units:
+    // Try to shift multipliers into the scale for easier mathematical treatment
+    // of the units:
     unit1.removeMultiplier();
   }
+
 
   /**
    * Manipulates the attributes of the Unit to express the unit with the value
    * of the scale attribute reduced to zero.
-   * 
    * For example, 1 millimetre can be expressed as a Unit with kind= 'metre'
    * multiplier='1' scale='-3' exponent='1'. It can also be expressed as a
    * Unit with kind='metre' multiplier='0.001' scale='0' exponent='1'.
    * 
    * @param unit
-   *            the Unit object to manipulate.
+   *        the Unit object to manipulate.
    */
   public static void removeScale(Unit unit) {
     unit.removeScale();
@@ -1238,7 +1251,7 @@ public class Unit extends AbstractSBase {
   /**
    * Represents the 'exponent' XML attribute of an unit element.
    */
-  private Double exponent;
+  private Double  exponent;
 
   /**
    * 
@@ -1261,24 +1274,26 @@ public class Unit extends AbstractSBase {
   /**
    * Represents the 'kind' XML attribute of an unit element.
    */
-  private Kind kind;
+  private Kind    kind;
 
   /**
    * Represents the 'multiplier' XML attribute of an unit element.
    */
-  private Double multiplier;
+  private Double  multiplier;
 
   /**
    * Represents the 'offset' XML attribute of an unit element.
+   * 
    * @deprecated the offset attribute should no longer be used.
    */
   @Deprecated
-  private Double offset;
+  private Double  offset;
 
   /**
    * Represents the 'scale' XML attribute of an unit element.
    */
   private Integer scale;
+
 
   /**
    * Creates a Unit instance. If the level is set and is superior or equal to
@@ -1289,8 +1304,10 @@ public class Unit extends AbstractSBase {
     initDefaults();
   }
 
+
   /**
-   * Creates a {@link Unit} instance from a multiplier, scale, kind and exponent. The
+   * Creates a {@link Unit} instance from a multiplier, scale, kind and
+   * exponent. The
    * offset is {@code null}.
    * 
    * @param multiplier
@@ -1312,8 +1329,10 @@ public class Unit extends AbstractSBase {
     offset = null;
   }
 
+
   /**
-   * Creates a {@link Unit} instance from a level and version. If the level is set and
+   * Creates a {@link Unit} instance from a level and version. If the level is
+   * set and
    * is superior or equal to 3 the multiplier, scale, kind, offset and
    * exponent are {@code null}.
    * 
@@ -1324,6 +1343,7 @@ public class Unit extends AbstractSBase {
     super(level, version);
     initDefaults();
   }
+
 
   /**
    * Creates a Unit instance from a scale, kind, exponent, level and version.
@@ -1339,6 +1359,7 @@ public class Unit extends AbstractSBase {
     isSetMultiplier = false;
   }
 
+
   /**
    * Creates a Unit instance from a scale, kind, level and version.
    * 
@@ -1351,6 +1372,7 @@ public class Unit extends AbstractSBase {
     this(scale, kind, 1d, level, version);
     isSetExponent = false;
   }
+
 
   /**
    * Creates a Unit instance from a kind, exponent, level and version.
@@ -1365,6 +1387,7 @@ public class Unit extends AbstractSBase {
     isSetScale = false;
   }
 
+
   /**
    * Creates a Unit instance from a kind, level and version. If the level is
    * set and is superior or equal to 3 the multiplier, scale, offset and
@@ -1376,7 +1399,8 @@ public class Unit extends AbstractSBase {
    */
   public Unit(Kind kind, int level, int version) {
     super(level, version);
-    if ((kind == null) || !isUnitKind(kind, level, version) && (kind != Kind.INVALID)) {
+    if ((kind == null)
+      || !isUnitKind(kind, level, version) && (kind != Kind.INVALID)) {
       throw new IllegalArgumentException(MessageFormat.format(
         "Unit kind {0} is undefined for SBML Level {1,number,integer} Version {2,number,integer}.",
         kind != null ? kind.toString() : "null", level, version));
@@ -1385,8 +1409,8 @@ public class Unit extends AbstractSBase {
     setKind(kind);
   }
 
+
   /**
-   * 
    * @param units
    * @param level
    * @param version
@@ -1394,6 +1418,7 @@ public class Unit extends AbstractSBase {
   public Unit(String units, int level, int version) {
     this(Unit.Kind.valueOf(units), level, version);
   }
+
 
   /**
    * Creates a Unit instance from a given Unit.
@@ -1403,10 +1428,10 @@ public class Unit extends AbstractSBase {
   public Unit(Unit unit) {
     super(unit);
 
-    exponent = unit.exponent != null ? Double.valueOf(unit.getExponent())
-      : null;
-    multiplier = unit.multiplier != null ? new Double(unit.getMultiplier())
-    : null;
+    exponent =
+      unit.exponent != null ? Double.valueOf(unit.getExponent()) : null;
+    multiplier =
+      unit.multiplier != null ? new Double(unit.getMultiplier()) : null;
     offset = unit.offset != null ? new Double(unit.getOffset()) : null;
     scale = unit.scale != null ? Integer.valueOf(unit.getScale()) : null;
     kind = unit.isSetKind() ? unit.getKind() : Kind.INVALID;
@@ -1416,7 +1441,9 @@ public class Unit extends AbstractSBase {
     isSetScale = unit.isSetScale;
   }
 
-  /* (non-Javadoc)
+
+  /*
+   * (non-Javadoc)
    * @see org.sbml.jsbml.AbstractSBase#clone()
    */
   @Override
@@ -1424,7 +1451,9 @@ public class Unit extends AbstractSBase {
     return new Unit(this);
   }
 
-  /* (non-Javadoc)
+
+  /*
+   * (non-Javadoc)
    * @see org.sbml.jsbml.AbstractSBase#equals(java.lang.Object)
    */
   @Override
@@ -1441,13 +1470,14 @@ public class Unit extends AbstractSBase {
     return equals;
   }
 
+
   /**
-   * 
    * @return the exponent of this {@link Unit} if it is set, 1 otherwise.
    */
   public double getExponent() {
     return isSetExponent() ? exponent : 1d;
   }
+
 
   /**
    * Returns the exponent of this {@link Unit}. This method is provided for
@@ -1461,25 +1491,24 @@ public class Unit extends AbstractSBase {
     return getExponent();
   }
 
+
   /**
-   * 
    * @return the kind of this Unit if it is set, null otherwise.
-   * 
    */
   public Kind getKind() {
     return isSetKind() ? kind : Kind.INVALID;
   }
 
+
   /**
-   * 
    * @return the multiplier of this {@link Unit} if it is set, 1 otherwise.
    */
   public double getMultiplier() {
     return isSetMultiplier() ? multiplier : 1d;
   }
 
+
   /**
-   * 
    * @return the offset of this {@link Unit} if it is set, 0 otherwise.
    * @deprecated
    */
@@ -1488,7 +1517,9 @@ public class Unit extends AbstractSBase {
     return isSetOffset() ? offset : 0d;
   }
 
-  /* (non-Javadoc)
+
+  /*
+   * (non-Javadoc)
    * @see org.sbml.jsbml.AbstractSBase#getParent()
    */
   @SuppressWarnings("unchecked")
@@ -1497,13 +1528,15 @@ public class Unit extends AbstractSBase {
     return (ListOf<Unit>) super.getParent();
   }
 
+
   /**
    * @return This method returns the abbreviated prefix of this {@link Unit},
    *         for instance, "m" for milli, i.e., if the scale is -3. In case
    *         that the {@link #scale} equals zero, an empty {@link String} is
-   *         returned. If no defined prefix exists for the current {@link #scale},
+   *         returned. If no defined prefix exists for the current
+   *         {@link #scale},
    *         the {@link String} {@code 10^(%d)} is returned, where
-   *         {@code %d}  denotes the {@link #scale}.
+   *         {@code %d} denotes the {@link #scale}.
    * @see #getPrefixAsWord()
    */
   public String getPrefix() {
@@ -1558,12 +1591,16 @@ public class Unit extends AbstractSBase {
     return String.format("%d^(%d)", 10, getScale());
   }
 
+
   /**
-   * @return the prefix of this {@link Unit}, for instance, "milli" if the {@link #scale} is -3.
-   *         In case that the {@link #scale} equals zero, an empty {@link String} is
-   *         returned. If no defined prefix exists for the current {@link #scale},
+   * @return the prefix of this {@link Unit}, for instance, "milli" if the
+   *         {@link #scale} is -3.
+   *         In case that the {@link #scale} equals zero, an empty
+   *         {@link String} is
+   *         returned. If no defined prefix exists for the current
+   *         {@link #scale},
    *         the {@link String} {@code 10^(%d)} is returned, where
-   *         {@code %d}  denotes the {@link #scale}.
+   *         {@code %d} denotes the {@link #scale}.
    * @see #getPrefix()
    */
   public String getPrefixAsWord() {
@@ -1618,15 +1655,17 @@ public class Unit extends AbstractSBase {
     return String.format("%d^(%d)", 10, getScale());
   }
 
+
   /**
-   * 
    * @return the scale of this Unit if it is set, 0 otherwise.
    */
   public int getScale() {
     return isSetScale() ? scale : 0;
   }
 
-  /* (non-Javadoc)
+
+  /*
+   * (non-Javadoc)
    * @see org.sbml.jsbml.AbstractSBase#hashCode()
    */
   @Override
@@ -1643,6 +1682,7 @@ public class Unit extends AbstractSBase {
     return hashCode;
   }
 
+
   /**
    * Predicate returning true or false depending on whether all the required
    * attributes for this Unit object have been set.
@@ -1654,17 +1694,19 @@ public class Unit extends AbstractSBase {
     return isSetKind();
   }
 
+
   /**
-   * Initializes the default values using the current Level/Version configuration.
+   * Initializes the default values using the current Level/Version
+   * configuration.
    */
   public void initDefaults() {
     initDefaults(getLevel(), getVersion());
   }
 
+
   /**
    * Initializes the attributes of this Unit (except for 'kind') to their
    * defaults values.
-   * 
    * The default values are as follows:
    * <ul>
    * <li>exponent = 1</li>
@@ -1679,6 +1721,7 @@ public class Unit extends AbstractSBase {
   public void initDefaults(int level, int version) {
     initDefaults(level, version, false);
   }
+
 
   /**
    * @param level
@@ -1727,14 +1770,17 @@ public class Unit extends AbstractSBase {
     return kind == Kind.AMPERE;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind avogadro.
    * 
-   * @return {@code true} if the kind of this Unit is avogadro, {@code false} otherwise.
+   * @return {@code true} if the kind of this Unit is avogadro, {@code false}
+   *         otherwise.
    */
   public boolean isAvogadro() {
     return kind == Kind.AVOGADRO;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind becquerel.
@@ -1745,6 +1791,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.BECQUEREL;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind candela
    * 
@@ -1753,6 +1800,7 @@ public class Unit extends AbstractSBase {
   public boolean isCandela() {
     return kind == Kind.CANDELA;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind Celsius
@@ -1765,6 +1813,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.CELSIUS;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind coulomb.
    * 
@@ -1773,6 +1822,7 @@ public class Unit extends AbstractSBase {
   public boolean isCoulomb() {
     return kind == Kind.COULOMB;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the {@link Kind}
@@ -1785,8 +1835,9 @@ public class Unit extends AbstractSBase {
    */
   public boolean isDimensionless() {
     return (kind == Kind.DIMENSIONLESS)
-        || ((getOffset() == 0d) && (getExponent() == 0d));
+      || ((getOffset() == 0d) && (getExponent() == 0d));
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind farad
@@ -1797,6 +1848,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.FARAD;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind gram
    * 
@@ -1805,6 +1857,7 @@ public class Unit extends AbstractSBase {
   public boolean isGram() {
     return kind == Kind.GRAM;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind gray
@@ -1815,6 +1868,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.GRAY;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind henry
    * 
@@ -1823,6 +1877,7 @@ public class Unit extends AbstractSBase {
   public boolean isHenry() {
     return kind == Kind.HENRY;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind hertz
@@ -1833,6 +1888,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.HERTZ;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind invalid.
    * 
@@ -1841,6 +1897,7 @@ public class Unit extends AbstractSBase {
   public boolean isInvalid() {
     return kind == Kind.INVALID;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind item
@@ -1851,6 +1908,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.ITEM;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind Joule
    * 
@@ -1859,6 +1917,7 @@ public class Unit extends AbstractSBase {
   public boolean isJoule() {
     return kind == Kind.JOULE;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind katal
@@ -1869,6 +1928,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.KATAL;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind kelvin
    * 
@@ -1877,6 +1937,7 @@ public class Unit extends AbstractSBase {
   public boolean isKelvin() {
     return kind == Kind.KELVIN;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind kilogram
@@ -1887,15 +1948,18 @@ public class Unit extends AbstractSBase {
     return kind == Kind.KILOGRAM;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind litre.
    * 
-   * @return {@code true} if the kind of this Unit is litre or 'liter', {@code false}
+   * @return {@code true} if the kind of this Unit is litre or 'liter',
+   *         {@code false}
    *         otherwise.
    */
   public boolean isLitre() {
     return (kind == Kind.LITRE) || (kind == Kind.LITER);
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind lumen
@@ -1906,6 +1970,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.LUMEN;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind lux
    * 
@@ -1914,6 +1979,7 @@ public class Unit extends AbstractSBase {
   public boolean isLux() {
     return kind == Kind.LUX;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind metre
@@ -1924,14 +1990,17 @@ public class Unit extends AbstractSBase {
     return (kind == Kind.METRE) || (kind == Kind.METER);
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind mole.
    * 
-   * @return {@code true} if the kind of this Unit is mole, {@code false} otherwise.
+   * @return {@code true} if the kind of this Unit is mole, {@code false}
+   *         otherwise.
    */
   public boolean isMole() {
     return kind == Kind.MOLE;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind newton
@@ -1942,6 +2011,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.NEWTON;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind ohm
    * 
@@ -1950,6 +2020,7 @@ public class Unit extends AbstractSBase {
   public boolean isOhm() {
     return kind == Kind.OHM;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind pascal
@@ -1960,6 +2031,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.PASCAL;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind radian
    * 
@@ -1968,6 +2040,7 @@ public class Unit extends AbstractSBase {
   public boolean isRadian() {
     return kind == Kind.RADIAN;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind second
@@ -1978,16 +2051,18 @@ public class Unit extends AbstractSBase {
     return kind == Kind.SECOND;
   }
 
+
   /**
-   * 
    * @return {@code true} if the exponent of this Unit is not {@code null}.
    */
   public boolean isSetExponent() {
     return isSetExponent && (exponent != null);
   }
 
+
   /**
-   * Predicate to test whether the 'kind' attribute of this {@link Unit} has been set.
+   * Predicate to test whether the 'kind' attribute of this {@link Unit} has
+   * been set.
    * 
    * @return
    */
@@ -1995,16 +2070,16 @@ public class Unit extends AbstractSBase {
     return (kind != null) && (kind != Kind.INVALID);
   }
 
+
   /**
-   * 
    * @return {@code true} if the multiplier of this Unit is not {@code null}.
    */
   public boolean isSetMultiplier() {
     return isSetMultiplier && (multiplier != null);
   }
 
+
   /**
-   * 
    * @return
    * @deprecated the offset attribute should no longer be used.
    */
@@ -2013,13 +2088,14 @@ public class Unit extends AbstractSBase {
     return isSetOffset && (offset != null);
   }
 
+
   /**
-   * 
    * @return {@code true} if the scale of this Unit is not {@code null}.
    */
   public boolean isSetScale() {
     return isSetScale && (scale != null);
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind siemens
@@ -2030,6 +2106,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.SIEMENS;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind sievert
    * 
@@ -2038,6 +2115,7 @@ public class Unit extends AbstractSBase {
   public boolean isSievert() {
     return kind == Kind.SIEVERT;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind steradian
@@ -2048,6 +2126,7 @@ public class Unit extends AbstractSBase {
     return kind == Kind.STERADIAN;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind tesla
    * 
@@ -2057,53 +2136,64 @@ public class Unit extends AbstractSBase {
     return kind == Kind.TESLA;
   }
 
+
   /**
-   * 
    * @return {@code true} if this Unit is a variant of area.
    */
   public boolean isVariantOfArea() {
     Kind kind = getKind();
-    return (kind == Kind.METER) || (kind == Kind.METRE)
-        && (getOffset() == 0d) && (getExponent() == 2d);
+    return (kind == Kind.METER)
+      || (kind == Kind.METRE) && (getOffset() == 0d) && (getExponent() == 2d);
   }
 
+
   /**
-   * 
    * @return {@code true} if this Unit is a variant of length.
    */
   public boolean isVariantOfLength() {
     Kind kind = getKind();
-    
+
     // Meter only allowed in Level 1 or -1 (level undefined)
-    return (this.getLevel() < 2 && (kind == Kind.METER)) || (kind == Kind.METRE)
-        && (getOffset() == 0d) && (getExponent() == 1d);
+    return (this.getLevel() < 2 && (kind == Kind.METER))
+      || (kind == Kind.METRE) && (getOffset() == 0d) && (getExponent() == 1d);
   }
 
+
   /**
-   * 
+   * @return {@code true} if this Unit is a variant of mass.
+   */
+  public boolean isVariantOfMass() {
+    Kind kind = getKind();
+
+    return (kind == Kind.GRAM || kind == Kind.KILOGRAM) && this.getOffset() == 0
+      && this.getExponent() == 1;
+  }
+
+
+  /**
    * @return {@code true} if this Unit is a variant of substance.
    */
   public boolean isVariantOfSubstance() {
     Kind kind = getKind();
-    if ((kind == Kind.MOLE)
-        || (kind == Kind.ITEM)
-        || ((((getLevel() == 2) && (getVersion() > 1)) || (getLevel() > 2)) && ((kind == Kind.GRAM) || isKilogram()))) {
+    if ((kind == Kind.MOLE) || (kind == Kind.ITEM)
+      || ((((getLevel() == 2) && (getVersion() > 1)) || (getLevel() > 2))
+        && ((kind == Kind.GRAM) || isKilogram()))) {
       return (getOffset() == 0d) && (getExponent() == 1d);
     }
     return false;
   }
 
+
   /**
-   * 
    * @return
    */
   public boolean isVariantOfTime() {
     return (getKind() == Kind.SECOND) && (getOffset() == 0d)
-        && (getExponent() == 1d);
+      && (getExponent() == 1d);
   }
 
+
   /**
-   * 
    * @return {@code true} if this Unit is a variant of volume.
    */
   public boolean isVariantOfVolume() {
@@ -2117,6 +2207,7 @@ public class Unit extends AbstractSBase {
     return false;
   }
 
+
   /**
    * Predicate for testing whether this Unit is of the kind volt
    * 
@@ -2126,14 +2217,16 @@ public class Unit extends AbstractSBase {
     return kind == Kind.VOLT;
   }
 
+
   /**
-   *Predicate for testing whether this Unit is of the kind watt
+   * Predicate for testing whether this Unit is of the kind watt
    * 
    * @return
    */
   public boolean isWatt() {
     return kind == Kind.WATT;
   }
+
 
   /**
    * Predicate for testing whether this Unit is of the kind weber
@@ -2144,14 +2237,16 @@ public class Unit extends AbstractSBase {
     return kind == Kind.WEBER;
   }
 
-  /* (non-Javadoc)
-   * @see org.sbml.jsbml.element.SBase#readAttribute(String attributeName, String prefix, String value)
+
+  /*
+   * (non-Javadoc)
+   * @see org.sbml.jsbml.element.SBase#readAttribute(String attributeName,
+   * String prefix, String value)
    */
   @Override
   public boolean readAttribute(String attributeName, String prefix,
     String value) {
-    boolean isAttributeRead = super.readAttribute(attributeName, prefix,
-      value);
+    boolean isAttributeRead = super.readAttribute(attributeName, prefix, value);
 
     if (!isAttributeRead) {
       isAttributeRead = true;
@@ -2179,6 +2274,7 @@ public class Unit extends AbstractSBase {
     return isAttributeRead;
   }
 
+
   /**
    * This method tries to remove the {@link #multiplier} of this unit.
    * Nothing will happen in the case that there is no {@link #multiplier}.
@@ -2205,7 +2301,8 @@ public class Unit extends AbstractSBase {
         } else {
           long round = Math.round(exp);
           if (Math.abs(round - exp) < 1E-15) {
-            // 1E-15 is an acceptable noise range due to the limitation of doubles to 17 decimal positions.
+            // 1E-15 is an acceptable noise range due to the limitation of
+            // doubles to 17 decimal positions.
             setScale(getScale() + ((int) round));
             setMultiplier(1d);
           }
@@ -2214,6 +2311,7 @@ public class Unit extends AbstractSBase {
     }
     return this;
   }
+
 
   /**
    * We remove the offset by expressing it within a new {@link #multiplier},
@@ -2228,7 +2326,8 @@ public class Unit extends AbstractSBase {
    * <p>
    * then becomes
    * <p>
-   * (0 + ({@link #offset} / 10^{@link #scale} + {@link #multiplier}) * 10^{@link #scale} * {@link #kind})^{@link #exponent} =
+   * (0 + ({@link #offset} / 10^{@link #scale} + {@link #multiplier}) * 10^
+   * {@link #scale} * {@link #kind})^{@link #exponent} =
    * <p>
    * (m' * 10^{@link #scale} * {@link #kind})^{@link #exponent}
    * <p>
@@ -2246,10 +2345,10 @@ public class Unit extends AbstractSBase {
     return this;
   }
 
+
   /**
    * Manipulates the attributes of the Unit to express the unit with the value
    * of the scale attribute reduced to zero.
-   * 
    * For example, 1 millimetre can be expressed as a Unit with kind= 'metre'
    * multiplier='1' scale='-3' exponent='1'. It can also be expressed as a
    * Unit with kind='metre' multiplier='0.001' scale='0' exponent='1'.
@@ -2264,6 +2363,7 @@ public class Unit extends AbstractSBase {
     return this;
   }
 
+
   /**
    * Sets the exponent of this {@link Unit}
    * 
@@ -2273,8 +2373,10 @@ public class Unit extends AbstractSBase {
     Double oldExponent = this.exponent;
     isSetExponent = true;
     this.exponent = Double.valueOf(exponent);
-    firePropertyChange(TreeNodeChangeEvent.exponent, oldExponent, this.exponent);
+    firePropertyChange(TreeNodeChangeEvent.exponent, oldExponent,
+      this.exponent);
   }
+
 
   /**
    * Sets the exponent of this {@link Unit}
@@ -2287,6 +2389,7 @@ public class Unit extends AbstractSBase {
     setExponent((double) exponent);
   }
 
+
   /**
    * Sets the {@link Kind} of this {@link Unit}
    * 
@@ -2298,23 +2401,28 @@ public class Unit extends AbstractSBase {
     firePropertyChange(TreeNodeChangeEvent.kind, oldKind, this.kind);
   }
 
+
   /**
    * Sets the multiplier of this {@link Unit}
    * 
    * @param multiplier
    * @throws PropertyNotAvailableException
-   *             if Level &lt; 2 and the given {@code multiplier != 1}.
+   *         if Level &lt; 2 and the given {@code multiplier != 1}.
    */
   public void setMultiplier(double multiplier) {
     if ((getLevel() < 2) && (multiplier != 1d)) {
-      // added the multiplier test != 1 to prevent error being reported when it is not necessary
-      throw new PropertyNotAvailableException(TreeNodeChangeEvent.multiplier, this);
+      // added the multiplier test != 1 to prevent error being reported when it
+      // is not necessary
+      throw new PropertyNotAvailableException(TreeNodeChangeEvent.multiplier,
+        this);
     }
     Double oldMultiplyer = this.multiplier;
     isSetMultiplier = true;
     this.multiplier = multiplier;
-    firePropertyChange(TreeNodeChangeEvent.multiplier, oldMultiplyer, this.multiplier);
+    firePropertyChange(TreeNodeChangeEvent.multiplier, oldMultiplyer,
+      this.multiplier);
   }
+
 
   /**
    * Sets the offset of this {@link Unit}
@@ -2322,7 +2430,7 @@ public class Unit extends AbstractSBase {
    * @param offset
    * @deprecated Only defined for SBML Level 2 Version 1.
    * @throws PropertyNotAvailableException
-   *             if Level/Version combination is not 2.1.
+   *         if Level/Version combination is not 2.1.
    */
   @Deprecated
   public void setOffset(double offset) {
@@ -2336,6 +2444,7 @@ public class Unit extends AbstractSBase {
     }
   }
 
+
   /**
    * Sets the scale of this Unit
    * 
@@ -2347,6 +2456,7 @@ public class Unit extends AbstractSBase {
     this.scale = scale;
     firePropertyChange(TreeNodeChangeEvent.scale, oldScale, scale);
   }
+
 
   /**
    * Produces a text formula representation of this unit.
@@ -2364,17 +2474,19 @@ public class Unit extends AbstractSBase {
       if ((prefix.length() > 0) && !prefix.startsWith("10")) {
         pow.insert(0, prefix);
       } else if (getScale() != 0) {
-        pow = FormulaCompiler.times(FormulaCompiler.pow(Integer.valueOf(10),
-          getScale()), pow);
+        pow = FormulaCompiler.times(
+          FormulaCompiler.pow(Integer.valueOf(10), getScale()), pow);
       }
       times = FormulaCompiler.times(times, pow);
     }
     if ((offset != null) && (offset.doubleValue() != 0d)) {
-      times = FormulaCompiler.sum(StringTools.toString(offset.doubleValue()),
-        times);
+      times =
+        FormulaCompiler.sum(StringTools.toString(offset.doubleValue()), times);
     }
-    return FormulaCompiler.pow(times, StringTools.toString(getExponent())).toString();
+    return FormulaCompiler.pow(times, StringTools.toString(getExponent()))
+                          .toString();
   }
+
 
   /**
    * 
@@ -2386,6 +2498,7 @@ public class Unit extends AbstractSBase {
     firePropertyChange(TreeNodeChangeEvent.exponent, oldExponent, exponent);
   }
 
+
   /**
    * 
    */
@@ -2394,6 +2507,7 @@ public class Unit extends AbstractSBase {
     kind = Kind.INVALID;
     firePropertyChange(TreeNodeChangeEvent.kind, oldKind, kind);
   }
+
 
   /**
    * 
@@ -2406,6 +2520,7 @@ public class Unit extends AbstractSBase {
       multiplier);
   }
 
+
   /**
    * @deprecated the offset attribute should no longer be used.
    */
@@ -2417,6 +2532,7 @@ public class Unit extends AbstractSBase {
     firePropertyChange(TreeNodeChangeEvent.offset, oldOffset, offset);
   }
 
+
   /**
    * 
    */
@@ -2427,8 +2543,11 @@ public class Unit extends AbstractSBase {
     firePropertyChange(TreeNodeChangeEvent.scale, oldScale, scale);
   }
 
-  /* (non-Javadoc)
-   * @see org.sbml.jsbml.element.SBase#readAttribute(String attributeName, String prefix, String value)
+
+  /*
+   * (non-Javadoc)
+   * @see org.sbml.jsbml.element.SBase#readAttribute(String attributeName,
+   * String prefix, String value)
    */
   @Override
   public Map<String, String> writeXMLAttributes() {
@@ -2460,7 +2579,8 @@ public class Unit extends AbstractSBase {
         attributes.put("exponent", Integer.toString((int) getExponent()));
         if (exponent - getExponent() != 0d) {
           logger.warn(MessageFormat.format(
-            ResourceManager.getBundle("org.sbml.jsbml.resources.cfg.Messages").getString("LOSS_OF_INFORMATION_DUE_TO_ROUNDING"),
+            ResourceManager.getBundle("org.sbml.jsbml.resources.cfg.Messages")
+                           .getString("LOSS_OF_INFORMATION_DUE_TO_ROUNDING"),
             getExponent(), exponent));
         }
       }
